--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         </div>
 
-        <a href="#" class="btn-primary">Explore all our recipes</a>
+        <a href="#" id="explore-recipes" class="btn-primary">Explore all our recipes</a>
       </div>
 
     </div>
